some i18n, fewer steps for freezing/thawing holds, and disabling editing of hold range/focus through css.  Needs more testing

--- a/Open-ILS/xul/staff_client/server/skin/global.css
+++ b/Open-ILS/xul/staff_client/server/skin/global.css
@@ -96,3 +96,10 @@ listitem { border-bottom: solid thin black; }
 checkbox[id="native-evergreen-catalog_service"] { display: none; }
 textbox[id="native-evergreen-catalog_username"] { display: none; }
 textbox[id="native-evergreen-catalog_password"] { display: none; }
+
+/*
+ * disable Edit Hold Range and Edit Hold Focus by default; should probably be using perms/settings for this
+ */
+.edit_hold_range { display: none; }
+.edit_hold_focus { display: none; }
+
